Fix form border-radius on small screens

--- a/styles.css
+++ b/styles.css
@@ -203,4 +203,8 @@ h3 {
     width: 100%;
     margin-top: 20px;
   }
+
+  .join-section .input, .join-section .submit {
+    border-radius: 4px;
+  }
 }
